--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,6 @@ ptitle{
   width:100%;
 }
 
-
 .card-main
 {
     margin-bottom: 10px;
@@ -280,3 +279,25 @@ color:#4080FF;
 	.ai > .label {
 		display: none;
 	}
+
+/* Create two equal columns that floats next to each other */
+.mediacolumn {
+  float: left;
+  width: 50%;
+  padding: 5px;
+  vertical-align: middle;
+}
+
+/* Clear floats after the columns */
+.mediarow:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 1200px) {
+  .mediacolumn {
+    width: 100%;
+  }
+}
