Added the CSE 471 Fall 2020 course webpage. (#2)
Added the CSE 471 Fall 2020 course webpage.

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -26,6 +26,7 @@
           <li class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown">Teaching</a>
                 <div class="dropdown-menu">
+                    <a href="{{ site.baseurl }}/teaching/471_f20/index.html" class="dropdown-item">CSE 471: Fall 2020</a>
                     <a href="{{ site.baseurl }}/teaching/571_f19.html" class="dropdown-item">CSE 571: Fall 2019</a>
                     <a href="{{ site.baseurl }}/teaching/571_s19.html" class="dropdown-item">CSE 571: Spring 2019</a>
                     <a href="{{ site.baseurl }}/teaching/471_f18.html" class="dropdown-item">CSE 471: Fall 2018</a>
