Added a new CSS template for table rows to supplement the new way of providing instructor and TA information in the course webpages.
The new way is a bit cleaner for basic info.

--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,15 @@ color:#4080FF;
     float: none;
     border: none;
 }
+
+.ta-td {
+
+    padding-left: 0px;
+    padding-right: 75px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
 .borderless td, .borderless th {
     border: none;
 }
